--- a/P07 - proba zadania/index.html
+++ b/P07 - proba zadania/index.html
@@ -3,80 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Zadanie z rzutowania z pomocą</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f4f4f8;
-      color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
-      padding: 2rem;
-    }
-
-    .zadanie {
-      background: white;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      max-width: 800px;
-      width: 100%;
-    }
-
-    .zadanie img {
-      max-width: 100%;
-      border-radius: 0.5rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-    }
-
-    .text {
-      font-size: 1.2rem;
-      margin: 1rem 0;
-    }
-
-    .btn {
-      background-color: #007BFF;
-      color: white;
-      padding: 0.8rem 1.5rem;
-      border: none;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .btn:hover {
-      background-color: #0056b3;
-    }
-
-    .pomoc {
-      margin-top: 2rem;
-      opacity: 0;
-      transition: opacity 0.6s ease;
-      max-width: 800px;
-    }
-
-    .pomoc.active {
-      opacity: 1;
-    }
-
-    iframe {
-      width: 100%;
-      height: 480px;
-      border: none;
-      border-radius: 0.5rem;
-    }
-
-    @media (max-width: 600px) {
-      iframe {
-        height: 300px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
