--- a/P05 - Grok - 02/index.html
+++ b/P05 - Grok - 02/index.html
@@ -150,7 +150,7 @@
     <p class="text-lg mb-4">© 2025 Kurs Rysunku Technicznego. Wszelkie prawa zastrzeżone.</p>
     <p class="mb-4"><a href="mailto:twoj.email@example.com" class="hover:underline">Kontakt: twoj.email@example.com</a></p>
     <div class="flex justify-center space-x-6">
-      <a href="#" class="hover:underline">Twitter</a>
+      <a href="#" class="hover:underline">X</a>
       <a href="#" class="hover:underline">LinkedIn</a>
     </div>
   </div>
